Split OpenGL Linux runtime modules